--- a/style/style.css
+++ b/style/style.css
@@ -1,22 +1,36 @@
-a{
-    color: #333;
-    /* font-size: 0.875rem;
-    min-height: 100vh; */
-}
+@charset "UTF-8";
 
-a:hover{
-    opacity: 0.7;
-    font-size: 30px;
+html {
+  font-size: 100%;
 }
-
-img{
-    max-width: 100%;
+/*
+フッターを画面下に配置するために、
+「position: relative;」を設定
+「min-height」で最小の高さを画面の高さにあわせる
+*/
+body {
+  color: #333;
+  font-size: 0.875rem;
+  min-height: 100vh;
+  position: relative;
 }
-
-li{
-    list-style: none;
+a {
+  color: #333;
+  text-decoration: none;
+  transition: all 0.5s;
 }
-
+a:hover {
+  opacity: 0.7;
+}
+img {
+  max-width: 100%;
+}
+li {
+  list-style: none;
+}
+/*
+コンテンツ幅を設定するための共通クラス
+*/
 .wrapper {
   width: 100%;
   max-width: 1360px;
@@ -36,4 +50,47 @@ li{
   font-size: 0.875rem;
   font-weight: normal;
   margin-bottom: 30px;
+}
+
+/*-------------------------------------------
+ヘッダー
+-------------------------------------------*/
+/*
+「position: fixed;」でヘッダーを固定し、「z-index: 10;」で前面に表示
+※他のコンテンツでpositionをrelative、absolute、fixedのいずれかに
+設定している場合は、z-indexの数値が大きい方が前面に表示される
+*/
+#header {
+  width: 100%;
+  height: 80px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 10
+}
+/*
+ハンバーガーメニュー
+メニューが閉じている時は、「left: -300px;」で画面左に隠し、
+「opacity: 0;」で非表示にしている
+*/
+#navi {
+  position: fixed;
+  top: 0;
+  left: -300px;
+  width: 300px;
+  color: #fff;
+  padding: 36px 50px;
+  transition: all 0.5s;
+  z-index: 20;
+  opacity: 0;
+}
+#navi a {
+  color: #fff;
+}
+#navi li {
+  margin-bottom: 14px;
 }
