商品ページ完成

--- a/style/style.css
+++ b/style/style.css
@@ -226,6 +226,36 @@ li {
   font-size: 0.625rem;
 }
 
+/* item */
 
-
+#item {
+  max-width: 800px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+#item .item-text {
+  width: 42%;
+}
+/*
+text-align: justify;
+テキストの両端を揃える
+*/
+#item .item-text p {
+  margin-bottom: 30px;
+  text-align: justify;
+}
+#item .item-text dl {
+  display: flex;
+  flex-wrap: wrap;
+}
+#item .item-text dt {
+  width: 30%;
+}
+#item .item-text dd {
+  width: 70%;
+}
+#item .item-img {
+  width: 50%;
+}
 
